Refactory:  Adicionando novas coisas
Colocando os arquivos de variáveis de ambientes.

Adicionado o arquivo files.js na pasta constants e junto a alteração do path dos imports para a pasta public

Foi colocado um path aliases no jsconfig.json

E por ultimo foi configurado o .storybook para poder usar o useRouter() no stories.

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,11 @@
 {
 	"compilerOptions": {
 		"baseUrl": "src",
-	},
+		"paths": {
+			"pages/*": ["../pages/*"],
+			"screens/*": ["../screens/*"],
+			"constants/*": ["../constants/*"],
+			"public/*": ["../public/*"]
+		}
+	}
 }
