--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,8 @@ yarn-error.log*
 
 # PWA Files
 **/public/sw.js
-**/public/workbox.*js
+**/public/workbox.*.js
 **/public/worker-*.js
 **/public/sw.js.map
-**/public/workbox.*js.map
+**/public/workbox-*.js.map
 **/public/worker-*.js.map
