--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@emotion/styled": "^11",
 		"@fontsource/poppins": "^4.5.0",
 		"@hookform/resolvers": "^2.8.5",
+		"apexcharts": "^3.33.0",
 		"axios": "^0.24.0",
 		"browser-image-compression": "^1.0.17",
 		"date-fns": "^2.27.0",
@@ -26,6 +27,7 @@
 		"next-pwa": "^5.4.4",
 		"nookies": "^2.5.2",
 		"react": "17.0.2",
+		"react-apexcharts": "^1.3.9",
 		"react-dom": "17.0.2",
 		"react-hook-form": "^7.22.2",
 		"react-lottie": "^1.2.3",
@@ -43,6 +45,7 @@
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.27.1",
-		"prettier": "2.5.1"
+		"prettier": "2.5.1",
+		"storybook-addon-next-router": "^3.1.1"
 	}
 }
