--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
+  "tabWidth": 2,
   "useTabs": false,
   "trailingComma": "none",
   "semi": false,
   "singleQuote": true,
   "endOfLine": "auto",
-  "arrowParens": "always"
+  "arrowParens": "always",
+  "printWidth": 80
 }
+
