--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
 		"crypto-js": "^4.1.1",
 		"date-fns": "^2.27.0",
 		"framer-motion": "^4",
+		"leaflet": "^1.8.0",
 		"next": "12.0.7",
 		"next-pwa": "^5.4.4",
 		"nookies": "^2.5.2",
 		"quill": "^1.3.7",
-		"react": "^17.1.0",
 		"react-apexcharts": "^1.3.9",
 		"react-dom": "17.0.2",
 		"react-geocode": "^0.2.3",
 		"react-hook-form": "^7.22.2",
+		"react-leaflet": "^4.0.0",
 		"react-lottie": "^1.2.3",
 		"react-toastify": "^8.1.0",
 		"yup": "^0.32.11"
