Feature: configurando o path no jsconfig.json e removendo o PWA do next.config.js

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,5 +3,9 @@
 		"baseUrl": "src",
 		"module": "esnext",
 		"target": "esnext",
+		"outDir": "./build",
+		"paths": {
+			"@public/*": ["../public/*"]
+		}
 	}
 }
